test_fixtures/print/missing_argument.lox
// ParserError: UnexpectedExpressionToken found Semicolon at l2c6
print;
